--- a/tempo/index.html
+++ b/tempo/index.html
@@ -6,5 +6,70 @@
     <link rel="stylesheet" href="./styles.css" />
     <title>ODDS| Tempo Practice</title>
   </head>
-  <body></body>
+  <body>
+    <div id="register-page">
+      <div id="paper">
+        <h1>Register Form</h1>
+        <form>
+          <div class="form-section">
+            <div class="form-control">
+              <label>First Name</label>
+              <input type="text" name="firstName" class="form-input" />
+            </div>
+            <div class="form-control">
+              <label>Last Name</label>
+              <input type="text" name="lastName" class="form-input" />
+            </div>
+            <div class="form-control">
+              <label>Birthday</label>
+              <input type="date" name="date" class="form-input" />
+            </div>
+            <div class="form-control">
+              <label>Birthday</label>
+              <div class="form-radio-group">
+                <label>
+                  <input
+                    type="radio"
+                    name="gender"
+                    value="male"
+                    class="form-input"
+                  />
+                  Male
+                </label>
+                <label>
+                  <input
+                    type="radio"
+                    name="gender"
+                    value="femole"
+                    class="form-input"
+                  />
+                  Female
+                </label>
+              </div>
+            </div>
+            <div class="form-control">
+              <label>Email</label>
+              <input type="email" name="email" class="form-input" />
+            </div>
+            <div class="form-control">
+              <label>Phone Number</label>
+              <input type="text" name="lastName" class="form-input" />
+            </div>
+          </div>
+          <div class="form-control mt-2">
+            <label>Subject</label>
+            <select class="form-input">
+              <option value="" disabled selected>Choose option</option>
+              <option value="subject-1">Subject 1</option>
+              <option value="subject-2">Subject 2</option>
+              <option value="subject-3">Subject 3</option>
+              <option value="subject-4">Subject 4</option>
+              <option value="subject-5">Subject 5</option>
+            </select>
+          </div>
+          <button class="mt-2">Submit</button>
+        </form>
+      </div>
+    </div>
+  </body>
 </html>
