feat: styles radio button

--- a/tempo/index.html
+++ b/tempo/index.html
@@ -27,22 +27,25 @@
             <div class="form-control">
               <label>Birthday</label>
               <div class="form-radio-group">
-                <label>
+                <label class="form-radio-label">
                   <input
                     type="radio"
                     name="gender"
                     value="male"
+                    checked
                     class="form-input"
                   />
+                  <span class="form-radio-custom"></span>
                   Male
                 </label>
-                <label>
+                <label class="form-radio-label">
                   <input
                     type="radio"
                     name="gender"
                     value="femole"
                     class="form-input"
                   />
+                  <span class="form-radio-custom"></span>
                   Female
                 </label>
               </div>
