--- a/interval/index.html
+++ b/interval/index.html
@@ -69,6 +69,38 @@
           </div>
         </div>
       </div>
+      <dic id="content">
+        <div id="dashboard">
+          <div class="topic">
+            <div class="topic-icon">
+              <img src="./assets/icons/dashboard.svg" alt="" />
+            </div>
+            <h3>Dashboard</h3>
+          </div>
+
+          <div class="dashboard-wrapper">
+            <div class="dashboard-box">
+              <img src="./assets/icons/thumb_up.svg" alt="" width="32px" />
+              <p class="title">Total Likes</p>
+              <p class="number">50,120</p>
+            </div>
+            <div class="dashboard-box">
+              <img
+                src="./assets/icons/mark_chat_unread.svg"
+                alt=""
+                width="32px"
+              />
+              <p class="title">Comments</p>
+              <p class="number">25,120</p>
+            </div>
+            <div class="dashboard-box">
+              <img src="./assets/icons/share.svg" alt="" width="32px" />
+              <p class="title">Total Share</p>
+              <p class="number">10,320</p>
+            </div>
+          </div>
+        </div>
+      </dic>
     </div>
   </body>
 </html>
